<resources>
    <string name="app_name">Sql</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="adress">Adress</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="last_namee">Last Name</string>
    <string name="phonee">Phone</string>
    <string name="mail">mail</string>
    <string name="adresss">Adress</string>
    <string name="namee">Name</string>
    <string name="add_contactt">Add Contact</string>
    <string name="add_contact">Add Contact</string>
    <string name="nname">Name</string>
    <string name="last_nameee">Last Name</string>
    <string name="phones">Phone</string>
    <string name="contacts" >Contacts</string>
    <string name="textview" ></string>
    <string name="second_name" >Last Name</string>
    <string name="phone_number1" >Phone</string>
    <string name="firstname" >First Name</string>
    <string name="secondname" >Second Name</string>
    <string name="phone_number" >Phone</string>
    <string name="home_address" >Adress</string>
    <string name="buttonsavetosql" >Save Data</string>
    <string name="update" >Update Data</string>
    <string name="deletefromdb" >Delte Data</string>
</resources>