<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddnewContact">

    <EditText
        android:id="@+id/edtfirstname"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="69dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtsecondname"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtfirstname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="90dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/secondname"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtphonenumber"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtsecondname"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number|textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtphonenumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="91dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textWebEmailAddress|textPersonName|textEmailSubject"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edthomeaddress"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="92dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/home_address"
        android:inputType="textPersonName"
        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnsave"
        android:layout_width="203dp"
        android:layout_height="102dp"
        android:layout_below="@+id/edthomeaddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="166dp"
        android:onClick="SaveContact"
        android:text="@string/buttonsavetosql"
        tools:ignore="VisualLintButtonSize" />

</RelativeLayout>